# fastmath

./: Cargo.toml  README.md
benches/: sign_bench.rs
src/: consts.rs  lib.rs  log.rs  rng.rs  sign.rs  traits.rs
