[package]
name = "fastmath"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ndornseif/fastmath"
homepage = "https://github.com/ndornseif/fastmath"
readme = "README.md"

[dependencies]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
paste = "1.0.15"

[[bench]]
name = "sign_bench"
harness = false
